# projet-smart-farm

br/: Makefile  Makefile.am  configure  configure.in  debugg.gladep
br/DataBase/: equipement.txt  horloge.txt  user.txt
br/autom4te.cache/: requests  traces.0
br/src/: plantation.c  troupeau.h  user.c  user.h
br/src/.deps/: capteur.Po
final/debugg/po/: Makefile.in
final/debugg/src/: ouvrier.c
projet/: config.h
projet/autom4te.cache/: output.0
projet/src/: callbacks.h  capteur.h  horloge.txt  interface.c.bak  ouvrier.h
projet/src/.deps/: plantation.Po
projet_smart_farm/: Makefile.in  config.status
projet_smart_farm/DataBase/: DATA_plant.txt  absenteisme.txt  capteur.txt  projet.txt
projet_smart_farm/src/: Makefile  Makefile.am  Makefile.in  client.h  debugg  interface.c  troupeau.c
projet_smart_farm/src/.deps/: callbacks.Po
smart_farm/: debugg.glade
smart_farm/DataBase/: data.txt
smart_farm/autom4te.cache/: traces.1
smart_farm/po/: Makefile
smart_farm/src/: callbacks.c  capteur.c  client.c  equipement.c  equipement.h  interface.h.bak  main.c  plantation.h
smart_farm/src/.deps/: equipement.Po  ouvrier.Po  troupeau.Po
